# lyapunov-nn-control-lab

./: .editorconfig  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.th.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
docs/: artifact_manifest.md  branch_protection.md  ci_workflows.md  codespaces.md  commands.md  defense_questions.md  demo_script.md  dependency_troubleshooting.md  dependency_updates.md  environment.md  experiment_log_template.md  experiment_parameters.md  experiment_workflow.md  faq.md  figures.md  git_workflow.md  glossary.md  index.md  kan_extension.md  limitations.md  maintenance.md  methodology.md  model_card.md  onboarding.md  portfolio_pitch.md  presentation_outline.md  project_status.md  project_structure.md  project_summary.md  pull_request_review.md  quality_gate.md  references.md  release_checklist.md  reproducibility.md  research_questions.md  result_naming.md  result_review_checklist.md  results_interpretation.md  security_scanning.md  thesis_plan.md  (+2 more)
examples/: quick_start.py
results/: experiment_report.md  performance_metrics.csv  stability_weight_ablation.csv
scripts/: check_docs_links.py  check_environment.py  check_workflow_badges.py  clean_results.py  list_results.py  new_experiment_log.py  project_status.py  quality_gate.py  run_checks.py  run_full_experiment.py  summarize_results.py
src/: controllers.py  lyapunov.py  (+9 more)
(+41 files in other folders)
